Change from height to max-height 650px on #hero to fix white gap right below the video with smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ a {
 /* hero video */
 
 #hero {
-    height: 650px;
+    max-height: 650px;
     width: 100%;
     overflow: hidden;
 }
